--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,3 @@
-app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
+louvre_billet:
+    resource: "@LouvreBilletBundle/Resources/config/routing.yml"
+    prefix:   /
