--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,6 +37,7 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    form_theme: 'bootstrap_3_layout.html.twig'
 
 # Doctrine Configuration
 doctrine:
